[package]
name = "libcnab"
version = "0.1.0"
authors = ["Matt Butcher <matt.butcher@microsoft.com>", "Radu M <radu.matei@microsoft.com>"]
edition = "2018"

[dependencies]
canonical_json = { git = "https://github.com/radu-matei/canonical_json" }
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
spectral = "0.6"
